# svn.slicer.org-Slicer3

./: CMakeLists.txt  README.md  launch.tcl.in  slicer_variables.tcl  vtkEMSegmentLogic.cxx  vtkEMSegmentLogic.h  vtkEMSegmentMRMLManager.cxx  vtkEMSegmentMRMLManager.h  vtkSlicerCommonInterface.cxx
AMF/: vtkImageFastSignedChamfer.cxx  vtkImageFastSignedChamfer.h  vtkImageIsoContourDist.cxx  vtkImageIsoContourDist.h  vtkImageLevelSets.cxx  vtkImageLevelSets.h  vtkImageLogOdds.cxx  vtkImageLogOdds.h  vtkImageMultiLevelSets.cxx  vtkImageMultiLevelSets.h  vtkImagePropagateDist.cxx  vtkImagePropagateDist.h  vtkImagePropagateDist2.cxx  vtkImagePropagateDist2.h  vtkLevelSetFastMarching.cxx  vtkLevelSetFastMarching.h  vtkLevelSets.cxx  vtkLevelSets.h  vtkMinHeap.h
Algorithm/: itkEMLocalOptimization.h  vtkImageEMGeneral.cxx  vtkImageEMGeneral.h  vtkImageEMGenericClass.cxx  vtkImageEMGenericClass.h  vtkImageEMLocalClass.cxx  vtkImageEMLocalClass.h  vtkImageEMLocalGenericClass.cxx  vtkImageEMLocalGenericClass.h  vtkImageEMLocalSegmenter.cxx  vtkImageEMLocalSegmenter.h  vtkImageEMLocalSuperClass.cxx  vtkImageEMLocalSuperClass.h  vtkImageEMMarkov.cxx
CMake/: EM_InstallTasks.cmake
CommandLineApplication/: CMakeLists.txt  IslandRemoval.xml
ImageFilters/: vtkImageClipAutomatic.cxx  vtkImageClipAutomatic.h  vtkImageIslandFilter.cxx  vtkImageIslandFilter.h  vtkImageLabelPropagation.h  vtkImageMeanIntensityNormalization.cxx  vtkImageMeanIntensityNormalization.h  vtkImageSumOverVoxels.cxx  vtkImageSumOverVoxels.h
MRML/: vtkMRMLEMSAtlasNode.cxx  vtkMRMLEMSAtlasNode.h  vtkMRMLEMSCollectionNode.cxx  vtkMRMLEMSCollectionNode.h  vtkMRMLEMSGlobalParametersNode.cxx  vtkMRMLEMSGlobalParametersNode.h  vtkMRMLEMSNode.cxx  vtkMRMLEMSNode.h  vtkMRMLEMSSegmenterNode.cxx  vtkMRMLEMSSegmenterNode.h  vtkMRMLEMSTargetNode.cxx  vtkMRMLEMSTargetNode.h  vtkMRMLEMSTemplateNode.cxx  vtkMRMLEMSTemplateNode.h  vtkMRMLEMSTreeNode.cxx  vtkMRMLEMSTreeNode.h  vtkMRMLEMSTreeParametersLeafNode.cxx  vtkMRMLEMSTreeParametersLeafNode.h  vtkMRMLEMSTreeParametersNode.cxx  vtkMRMLEMSTreeParametersNode.h  vtkMRMLEMSTreeParametersParentNode.cxx  vtkMRMLEMSTreeParametersParentNode.h  vtkMRMLEMSVolumeCollectionNode.cxx  vtkMRMLEMSVolumeCollectionNode.h  vtkMRMLEMSWorkingDataNode.cxx  vtkMRMLEMSWorkingDataNode.h  vtkMRMLEMSegmentNode.cxx
Modules/: CMakeLists.txt
Qt/: CMakeLists.txt  qSlicerEMSegmentModule.cxx  qSlicerEMSegmentModule.h  qSlicerEMSegmentQuickModule.cxx  qSlicerEMSegmentQuickModule.h
Qt/Logic/: CMakeLists.txt
Qt/Py/EMSegmentWizard/: EMSegmentDefineAnatomicalTreeStep.py  EMSegmentDefineAtlasStep.py  EMSegmentDefineInputChannelsStep.py  EMSegmentDefineMiscParametersStep.py  EMSegmentEditNodeBasedParametersStep.py  EMSegmentQuickStep2.py  EMSegmentQuickStep3.py  EMSegmentQuickStep4.py  EMSegmentSpecifyIntensityDistributionStep.py
Qt/Testing/Cxx/: CMakeLists.txt
Qt/Widgets/: CMakeLists.txt  qSlicerEMSegmentAnatomicalTreeWidget.cxx  qSlicerEMSegmentGraphWidget.cxx  vtkPlotGaussian.h
Qt/Widgets/Resources/UI/: qSlicerEMSegmentGraphWidget.ui
Qt/Widgets/Testing/Cxx/: CMakeLists.txt
Registration/: vtkBSplineRegistrator.cxx  vtkBSplineRegistrator.h  vtkITKTransformAdapter.h  vtkRigidRegistrator.cxx  vtkRigidRegistrator.h
Scripts/: extend.tcl  genlib.tcl  getbuildtest.tcl  versioner.tcl
(+95 files in other folders)
